k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: melek4000/orders-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
