k8s/load-balancing.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
spec:
  type: LoadBalancer
  selector:
    app: orders
  ports:
  - port: 80
    targetPort: 3000
